modularizing embedded dependencies