@@ -15,7 +15,33 @@
     <description>Implements the Deployment Model</description>
 
     <properties>
+        <!-- Avoids split package with the actual mule-module-artifact, mule-module-deployment-model and their tests -->
+        <surefire.args>
+            --add-modules=net.bytebuddy.agent
+            --add-modules=org.mule.runtime.maven.pom.parser.api
+            --add-reads=org.mule.runtime.artifact=org.mule.runtime.maven.pom.parser.api
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.privileged=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.privileged.exception=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.privileged.registry=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.config=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.context=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.exception=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.interception=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.profiling=ALL-UNNAMED
+            --add-exports=org.mule.runtime.core/org.mule.runtime.core.internal.registry=ALL-UNNAMED
+            --add-exports=org.mule.runtime.extension.model/org.mule.runtime.config.internal.error=ALL-UNNAMED
+            --add-exports=org.mule.runtime.artifact/org.mule.runtime.module.artifact.builder=org.mule.runtime.deployment.model.impl
+            --add-exports=org.mule.runtime.deployment.model/org.mule.runtime.deployment.model.internal.domain=org.mule.runtime.deployment.model.impl
+            --add-exports=org.mule.runtime.deployment.model/org.mule.runtime.deployment.model.internal.domain=ALL-UNNAMED
+            --add-exports=org.mule.runtime.deployment.model.impl/org.mule.runtime.module.deployment.impl.internal.proxy=org.mule.runtime.container
+            --patch-module=org.mule.runtime.artifact=${org.mule.runtime:mule-module-artifact:test-jar:tests}
+            --patch-module=org.mule.runtime.deployment.model=${org.mule.runtime:mule-module-deployment-model:test-jar:tests}
+            ${surefire.test.unit.open.args}
+        </surefire.args>
+
         <javaModuleName>org.mule.runtime.deployment.model.impl</javaModuleName>
+
+        <skipExportTests>false</skipExportTests>
         <formatterConfigPath>../../formatter.xml</formatterConfigPath>
         <maven.compat.version>3.3.9</maven.compat.version>
     </properties>
@@ -205,6 +231,11 @@
                         <goals>
                             <goal>test-jar</goal>
                         </goals>
+                        <configuration>
+                        	<includes>
+                        		<include>org/mule/runtime/module/deployment/impl/internal/AbstractSplashScreenTestCase*</include>
+                        	</includes>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
